# perception-based-constraint-solving

./: .gitignore  README.md  config.py  exp_calibration.py  exp_joint_inf.py  exp_overlap.py  pbr_module.py  pyproject.toml  readme.md  readme_req.txt
calibration/: __init__.py  calibration.py  visualization.py
constraint_solver/: constraint_solver.py  sudoku_solver.py  sudoku_solver_nasp.py  sudoku_solver_prolog.py
evaluation/: __init__.py  calibration.py  score.py
methods/: calibration.py  fontstyle.py  nasr.py  neurasp.py  pbcs.py
nasr/: board.py  misc.py  transformer.py  transformer_sudoku.py
neuralnet/: __init__.py  backbone.py  calibration_layers.py  dnn_arch.py  generic_layers.py  mnist.py  svhn.py
neurasp/: __init__.py
tests/: test_databuilder.py
utee/: __init__.py  databuilder.py  datawrapper.py  img_processing.py  load.py  plot.py
